centered google logo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html>
 
+<link rel="stylesheet" href="styles/style.css">
+
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="40%" alt="Google Logo"></a>
+</div>
 
 </html>
 
