Create first version of header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
 
 <link rel="stylesheet" href="styles/style.css">
 
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="40%" alt="Google Logo"></a>
-</div>
+<body>
+    <div class = "top-left">
+        <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
+            About
+        </a>
+    </div>
+  
+    <div class = "top-left">
+        <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
+            Store 
+        </a>
+    </div>
+    <div class = "top-right">
+    <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
+        Gmail 
+    </a>
+    </div>
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="40%" alt="Google Logo">
 
+</body>
 </html>
 
