create rough draft

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
 <link rel="stylesheet" href="styles/style.css">
 
 <body>
-    <div class = "top-left">
-        <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
-            About
-        </a>
+    <ul>
+        <li><a href="https://github.com/riccocruz/google-homepage">About</a></li>
+        <li><a href="https://github.com/riccocruz/google-homepage">Store </a></li>
+        <li style="float:right"><a href = "https://github.com/riccocruz/google-homepage">Gmail</a></li>
+        <li style="float:right"><a href = "https://github.com/riccocruz/google-homepage">Images</a></li>
+
+    </ul>
+
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+
+    <div class = "center">
+        <p><input name="name" value="Enter URL"></p>
     </div>
-  
-    <div class = "top-left">
-        <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
-            Store 
-        </a>
-    </div>
-    <div class = "top-right">
-    <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">
-        Gmail 
-    </a>
-    </div>
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="40%" alt="Google Logo">
+
+    <ul class="bottom">
+        <li><a href="https://github.com/riccocruz/google-homepage">Advertising</a></li>
+        <li><a href="https://github.com/riccocruz/google-homepage">Business</a></li>
+        <li><a href="https://github.com/riccocruz/google-homepage">How Search Works</a></li>
+        <li style="float:right"><a href = "https://github.com/riccocruz/google-homepage">Privacy</a></li>
+        <li style="float:right"><a href = "https://github.com/riccocruz/google-homepage">Terms</a></li>
+        <li style="float:right"><a href = "https://github.com/riccocruz/google-homepage">Images</a></li>
+    </ul>
+    <!-- </div> -->
 
 </body>
 </html>
